--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,9 @@ input.sub_bt{
 input.sub_bt:hover{
 	box-shadow: 0 0 2px 2px #707070;
 }
+.find h3:first-child{
+	padding: 30px 0 0 0;
+}
+.find h3:last-child{
+	padding: 5px 0 0;
+}
