--- a/css/default.css
+++ b/css/default.css
@@ -1,4 +1,4 @@
-@charset "utf-8";
+@charset "UTF-8";
 @import url(http://fonts.googleapis.com/earlyaccess/notosanskr.css);
 
 /* Reset */
@@ -53,4 +53,3 @@ textarea[disabled]{padding:11px; font-size:16px; color:#666; font-weight:normal;
 
 .clear {clear:both;}
 .clear:after { content:""; display:block; clear:both;}
-.hode{ position:absolute; left:-5000px;}/*숨김*/
