--- a/css/side_bar.css
+++ b/css/side_bar.css
@@ -1,50 +1,52 @@
 @charset "UTF-8";
 /* 정리 안 됨, selector 표기 통일 예정 */
 
-body {margin: 0;}
+/*body {margin: 0;}*/
 
-a {text-decoration: none;}
+/*a {color: #000; text-decoration: none; cursor: pointer;}*/
+/*ul,ol,li{list-style: none;}*/
 
-.blind {visibility: hidden; overflow: hidden; position: absolute; top: 0; left: 0; width: 0; height: 0; font-size: 0; line-height: 0}
+/*.blind {visibility: hidden; overflow: hidden; position: absolute; top: 0; left: 0; width: 0; height: 0; font-size: 0; line-height: 0;}*/
+/*.hide,caption,legend{line-height: 0; font-size: 1px; overflow: hidden;}*/
 
-input#menu_icon {display: none;}
+input#menu_btn {display: none;}
 
 /* header */
-header {position: relative; background: coral;}
-header > div {margin: 0;  position: relative; width: 100%; min-height: 80px;}
+/*header {position: relative; background: coral;}*/
+/*header > div {margin: 0;  position: relative; width: 100%; min-height: 80px;}*/
 
-header label.menu_btn {position: absolute; top: 50%; right: 20px; width: 48px; height: 48px; background: url("../img/aside/menu_btn.png") no-repeat; transform: translateY(-50%); cursor: pointer; z-index: 3;}
+header label.icon_menu {position: absolute; top: 50%; right: 20px; width: 48px; height: 48px; background: url("../img/aside/menu_btn.png") no-repeat; transform: translateY(-50%); cursor: pointer; z-index: 103;}
 
 /* article */
-article #container {margin: 0 auto; max-width: 1200px;}
-article #container {width: 100%; background: chartreuse;}
+/*article #container {margin: 0 auto; max-width: 1200px;}*/
+/*article #container {width: 100%; background: chartreuse;}*/
 
 
 /* aside */
-aside {}
-#all_menu {position: fixed; top: 0; right: -369px; width: 369px; height: 100%; background: #eee; z-index: 2; transition: all .30s;}
+#sidebar {position: fixed;  top: 0; right: -369px; width: 369px; height: 100%; background: #eee; z-index: 102; transition: all .30s;}
 
-#all_menu .profile {top: 0; width: 100%; height: 180px; background: gold;}
+.profile {width: 100%; height: 180px; background: gold;}
 
-#all_menu .auth_menu {}
-#all_menu .auth_menu ul {margin: 0; padding: 0; width: 100%; height: 110px;}
-#all_menu .auth_menu ul li {float: left; list-style: none; width: 33.3%; height: 110px; box-sizing: border-box; /*padding-top: 60px;*/ border-top: 1px solid #eee; border-left: 1px solid #eee; background: white;}
-/* case1, case3 */
-#all_menu .auth_menu ul li a {display: block; text-align: center; color: black;}
-/* case2 나머지도 이걸로 바꾸기 +ico_랑 txt 높이 조절하기 */
-#all_menu .auth_menu ul li a {position: relative; display: block; width: 100%; height: 100%; text-align: center; color: black;}
-#all_menu .auth_menu ul li a .ico_reservation_list {position: absolute; top: 15px; left: 50%; margin-left: -17px; width: 48px; height: 48px; background: url("../img/aside/ico_reservation_list.png") no-repeat; cursor: pointer; }
-#all_menu .auth_menu ul li .auth_txt {display: inline-block; padding-top: 65px; line-height: 18px;}
+.auth_menu {position: relative;  width: 100%; height: 110px;}
+.auth_menu ul {position: absolute; margin: 0; padding: 0; width: 100%; height: 100%;}
+.auth_menu ul li {float: left; width: 33.3%; height: 100%; box-sizing: border-box; border-top: 1px solid #eee; border-left: 1px solid #eee; background: white;}
+.am {position: relative; display: block; width: 100%; height: 100%; text-align: center;}
+.am_icon {position: absolute; top: 15px; left: 52%; transform: translateX(-50%); width: 44px; height: 48px;}
+.icon_book {background: url("../img/aside/icon_book44.png") no-repeat;}
+.icon_manage {background: url("../img/aside/icon_book44.png") no-repeat;}   /* 임시 */
+.icon_interest {background: url("../img/aside/icon_book44.png") no-repeat;} /* 임시 */
+.am_text {display: inline-block; padding-top: 66px; line-height: 20px;}
 
-#all_menu #gnb {}
-#all_menu #gnb ul {margin: 0; padding: 15px 0; width: 100%; height: 50px;}
-#all_menu #gnb ul li {list-style: none; width: 100%; padding: 20px; box-sizing: border-box; border: 1px solid #eee; background: white;}
-#all_menu #gnb ul li a {display: block; text-align: left;  color: black;}
+.menu {position: relative; margin-top: 20px; width: 100%; height: 280px;}
+.menu ul {position: absolute; margin: 0; padding: 0; width: 100%; height: 100%;}
+.menu ul li {width: 100%; height: 25%; box-sizing: border-box; border: 1px solid #eee; background: white;}
+.depth-1 {position: relative; display: block; width: 100%; height: 100%; line-height: 100%;}
+
 
 /* if checked */
-input#menu_icon:checked ~ header .menu_btn {}
-input#menu_icon:checked ~ #all_menu {right: 0;}
-input#menu_icon:checked ~ .bg {opacity: 1; visibility: visible; cursor: pointer;}
-input#menu_icon:checked ~ aside #all_menu {right: 0;}
+input#menu_btn:checked ~ header .icon_menu {}
+input#menu_btn:checked ~ #sidebar {right: 0;}
+input#menu_btn:checked ~ .bg {opacity: 1; visibility: visible; cursor: pointer;}
+input#menu_btn:checked ~ aside #sidebar {right: 0;}
 
-.bg {position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,.8); transition: all .30s; opacity: 0; visibility: hidden; z-index: 1;}
+.bg {position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,.8); transition: all .30s; opacity: 0; visibility: hidden; z-index: 101;}
